--- a/fit.css
+++ b/fit.css
@@ -124,7 +124,7 @@
   .contato-whatsapp:hover {
     filter: invert(1);
   }
-  @media (max-width: 480px){
+  @media(min-width: 0px) and (max-width:480px){
     .cabecalho {
         height: auto;
         background: linear-gradient(0deg, #121212, transparent),url(https://images.unsplash.com/photo-1507398941214-572c25f4b1dc?q=80&w=1973&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
@@ -154,9 +154,7 @@
     .cadastro{
         width: auto;
     }
-    .contato-whatsapp{
-       position: relative;
-       left: 200px;
-       top: 10px;  
-    }
+   
+    
+    
 }
