--- a/exercicio2.css
+++ b/exercicio2.css
@@ -94,7 +94,7 @@ footer {
     margin: 10px;
   }
   footer {
-    height: 50px;
+    height: 5vh;
     padding: 0;
   }
 }
@@ -134,8 +134,12 @@ footer {
         border: 1px solid;
         background-color: beige;
     }
+    footer {
+      height: 5vh;
+      padding: 0;
+    }
 }
-@media (min-width:769px) and (max-width:1400px){
+@media (min-width:769px) and (max-width:1800px){
     .titulo{
         text-align: center;
         font-size: 3rem;
@@ -155,4 +159,22 @@ footer {
         padding: 8px;
         margin:5px
     }
+    .images {
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 12px;
+}
+    .image{
+      width: 100%;
+      margin: 18px;
+      border: 1px solid;
+      background-color: beige;
+}
+    footer {
+      height: 5vh;
+      padding: 0;
+}
 }
